--- a/MemeMe-1/Base.lproj/Main.storyboard
+++ b/MemeMe-1/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -34,20 +35,34 @@
                                 <items>
                                     <barButtonItem systemItem="camera" id="BXW-2K-Uun"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Zdw-ur-yOJ"/>
-                                    <barButtonItem title="Album" id="bjI-Gh-rmF"/>
+                                    <barButtonItem title="Album" id="bjI-Gh-rmF">
+                                        <connections>
+                                            <action selector="chooseAlbumImage:" destination="BYZ-38-t0r" id="LAw-9w-nZk"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wxk-KB-pfi">
+                                <rect key="frame" x="16" y="64" width="343" height="559"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="gKb-NO-5id" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="CuB-Ga-ufv"/>
+                            <constraint firstItem="wxk-KB-pfi" firstAttribute="top" secondItem="gKb-NO-5id" secondAttribute="bottom" id="G08-2h-7JK"/>
                             <constraint firstAttribute="trailing" secondItem="gKb-NO-5id" secondAttribute="trailing" id="J5w-yT-fDH"/>
                             <constraint firstAttribute="trailing" secondItem="j4Y-Dj-LW3" secondAttribute="trailing" id="Lm2-fW-PUV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wxk-KB-pfi" secondAttribute="trailing" id="Sqs-0H-OR3"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j4Y-Dj-LW3" secondAttribute="bottom" id="W1v-c9-9Ao"/>
+                            <constraint firstItem="wxk-KB-pfi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="a8I-YO-OLq"/>
                             <constraint firstItem="gKb-NO-5id" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eiw-mR-MML"/>
+                            <constraint firstItem="j4Y-Dj-LW3" firstAttribute="top" secondItem="wxk-KB-pfi" secondAttribute="bottom" id="gSn-Y4-37d"/>
                             <constraint firstItem="j4Y-Dj-LW3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sIP-E5-v2U"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="wxk-KB-pfi" id="UfO-Uv-WwM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
