--- a/MemeMe-1/Base.lproj/Main.storyboard
+++ b/MemeMe-1/Base.lproj/Main.storyboard
@@ -33,7 +33,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j4Y-Dj-LW3">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem systemItem="camera" id="BXW-2K-Uun"/>
+                                    <barButtonItem systemItem="camera" id="BXW-2K-Uun">
+                                        <connections>
+                                            <action selector="shootNewImage:" destination="BYZ-38-t0r" id="OBr-fb-P6s"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Zdw-ur-yOJ"/>
                                     <barButtonItem title="Album" id="bjI-Gh-rmF">
                                         <connections>
@@ -61,6 +65,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cameraButton" destination="BXW-2K-Uun" id="TnC-NV-vvn"/>
                         <outlet property="imageView" destination="wxk-KB-pfi" id="UfO-Uv-WwM"/>
                     </connections>
                 </viewController>
