--- a/MemeMe-1/Base.lproj/Main.storyboard
+++ b/MemeMe-1/Base.lproj/Main.storyboard
@@ -25,7 +25,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gKb-NO-5id">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem systemItem="action" id="FSc-de-N5q"/>
+                                    <barButtonItem enabled="NO" systemItem="action" id="FSc-de-N5q">
+                                        <connections>
+                                            <action selector="share:" destination="BYZ-38-t0r" id="yEG-Q0-JDN"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="5ff-Vc-7d2"/>
                                     <barButtonItem title="Cancel" id="cTV-9w-Cpo"/>
                                 </items>
@@ -86,6 +90,7 @@
                         <outlet property="bottomTextField" destination="ezh-vk-ncz" id="l4b-Vz-DXl"/>
                         <outlet property="cameraButton" destination="BXW-2K-Uun" id="TnC-NV-vvn"/>
                         <outlet property="imageView" destination="wxk-KB-pfi" id="UfO-Uv-WwM"/>
+                        <outlet property="shareButton" destination="FSc-de-N5q" id="zMx-Vn-SOg"/>
                         <outlet property="topTextField" destination="i9t-jK-5kb" id="era-hS-8Tv"/>
                     </connections>
                 </viewController>
