--- a/MemeMe-1/Base.lproj/Main.storyboard
+++ b/MemeMe-1/Base.lproj/Main.storyboard
@@ -31,7 +31,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="5ff-Vc-7d2"/>
-                                    <barButtonItem title="Cancel" id="cTV-9w-Cpo"/>
+                                    <barButtonItem title="Cancel" id="cTV-9w-Cpo">
+                                        <connections>
+                                            <action selector="cancel:" destination="BYZ-38-t0r" id="I3F-g1-QLu"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j4Y-Dj-LW3">
